[gd_scene load_steps=12 format=3 uid="uid://bk4ng8bhova7f"]

[ext_resource type="Script" uid="uid://tlefmu1erhqy" path="res://main/start_screen.gd" id="1_86ffh"]
[ext_resource type="Texture2D" uid="uid://glifqa3hqk5s" path="res://main/title.png" id="1_ywhhl"]
[ext_resource type="Theme" uid="uid://bgpm23y06s5df" path="res://main_theme.tres" id="2_l0jeu"]
[ext_resource type="FontFile" uid="uid://wt66k3fampfe" path="res://PixelOperator8.ttf" id="4_eufv4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wywcg"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ywhhl"]
bg_color = Color(0.984314, 0.94902, 0.211765, 1)

[sub_resource type="Animation" id="Animation_eufv4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("YellowBar:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 100)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Blurb:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Blurb/WorldBurningLabel:theme_override_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.984314, 0.94902, 0.211765, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Blurb/HackLabel:theme_override_colors/font_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("YellowBar:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("YellowBar:size")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1151, 179)]
}

[sub_resource type="Animation" id="Animation_1wrxs"]
resource_name = "blurb"
length = 7.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Blurb:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Blurb/WorldBurningLabel:theme_override_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.96667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.984314, 0.94902, 0.211765, 0), Color(0.984314, 0.94902, 0.211765, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Blurb/HackLabel:theme_override_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2.13333, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("YellowBar:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_86ffh"]
resource_name = "intro"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("YellowBar:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(0.353553, 0.353553),
"update": 0,
"values": [Vector2(-1151, 100), Vector2(0, 100)]
}

[sub_resource type="Animation" id="Animation_k3cur"]
resource_name = "outro"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("YellowBar:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(2.07053, 2.07053),
"update": 0,
"values": [Vector2(1151, 179), Vector2(1151, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("YellowBar:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(2.07053, 2.07053),
"update": 0,
"values": [Vector2(0, 100), Vector2(0, 190)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1wrxs"]
_data = {
&"RESET": SubResource("Animation_eufv4"),
&"blurb": SubResource("Animation_1wrxs"),
&"intro": SubResource("Animation_86ffh"),
&"outro": SubResource("Animation_k3cur")
}

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_86ffh")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wywcg")

[node name="YellowBar" type="Panel" parent="."]
layout_mode = 0
offset_top = 190.0
offset_right = 1151.0
offset_bottom = 190.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ywhhl")

[node name="TitleSprite" type="Sprite2D" parent="."]
position = Vector2(573, 188)
texture = ExtResource("1_ywhhl")

[node name="StartButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 526.0
offset_top = 331.0
offset_right = 641.0
offset_bottom = 371.0
theme = ExtResource("2_l0jeu")
text = "Start"

[node name="Blurb" type="VBoxContainer" parent="."]
visible = false
custom_minimum_size = Vector2(600, 0)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 36
alignment = 1

[node name="WorldBurningLabel" type="Label" parent="Blurb"]
layout_mode = 2
theme_override_colors/font_color = Color(0.984314, 0.94902, 0.211765, 1)
theme_override_fonts/font = ExtResource("4_eufv4")
theme_override_font_sizes/font_size = 36
text = "The world is on fire"
horizontal_alignment = 1

[node name="HackLabel" type="Label" parent="Blurb"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_eufv4")
theme_override_font_sizes/font_size = 36
text = "Hack to a fairer future"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_1wrxs")
}
autoplay = "intro"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
